--- a/shortphonenumshow/AndroidManifest.xml
+++ b/shortphonenumshow/AndroidManifest.xml
@@ -14,12 +14,15 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_LOGS"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="FloatApplication"
+        >
         <activity
             android:name="com.online.shortphonenumshow.MainActivity"
             android:label="@string/app_name" >
@@ -29,6 +32,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- renren sdk中的Activity -->
+		<!-- 辅助完成SSO、Oauth的Activity ，必须在AndroidManifest.xml中声明 -->
+		<activity
+			android:name="com.renren.api.connect.android.AuthorizationHelper$BlockActivity"
+			android:theme="@android:style/Theme.Dialog"></activity>
+			
+		<!-- 发布状态的Activity，如需使用一键发布状态的功能，则必须在AndroidManifest.xml中声明 -->
+		<activity android:name="com.renren.api.connect.android.status.StatusPubActivity"></activity>
+        
+        
       <receiver android:name=".PhoneBootReceiver">  
     <intent-filter>  
         <action android:name="android.intent.action.BOOT_COMPLETED" />  
