--- a/shortphonenumshow/project.properties
+++ b/shortphonenumshow/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=android-15
+android.library=false
+android.library.reference.1=../../../Fcj-android/renren_android_connect
